--- a/localcontexts/static/css/register.css
+++ b/localcontexts/static/css/register.css
@@ -208,19 +208,22 @@ input[type=checkbox] {
 /* Choose an account page */
 
 .account-card {
-    width: 218px;
-    height: 390px;
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 15px;  
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
-    border-radius: 12px;
+    padding: 12px 16px;
+    border-radius: 4px;
+    border: 1px solid #007385;
 }
 
-.account-card:nth-child(2) {
-    margin-left: 10px;
-    margin-right: 10px;
+.account-card.card-selected {
+    background: #E8F1F3;
+    border-width: 2px;
+}
+
+.account-card input[type=radio] {
+    width: 20px;
+    height: 20px;
+    accent-color: #007385;
 }
 
 .white-btn-select {
@@ -248,9 +251,9 @@ input[type=checkbox] {
     height: 38.46px;
 }
 
-.tiny-notice {
-    width: 42.59px;
-    height: 42.59px;
+.tiny-notice, .tiny-sp-logo {
+    width: 50px;
+    height: 50px;
 }
 
 /* Little orange div on login page */
