CU-8689kbeef - Add content to create account page

--- a/templates/accounts/select-account.html
+++ b/templates/accounts/select-account.html
@@ -130,7 +130,7 @@
         </div>
     </div>
 
-    <p>Create a new account or Join an existing account</p>
+    <p>Create a new account or Join an existing account. Not sure which account type to create? <a class="default-a">Contact us</a>.</p>
     <div class="flex-this gap-1">
         <a id="create-account" class="primary-btn disabled-btn">Create</a>
         <a id="join-account" class="primary-btn disabled-btn">Join</a>
