minor content update

--- a/templates/account_settings_pages/_preferences.html
+++ b/templates/account_settings_pages/_preferences.html
@@ -36,7 +36,7 @@
         <div class="flex-this space-between border-top-bottom-grey w-100 align-center pad-top-1 padding-bottom-1">
             <div class="w-90">
                 <h4 class="mt-15 mb-0">Show Connections in Public View Page</h4>
-                <p class="font-size-14 mt-8">Allow other Hub accounts that have connected to your account to be displayed on your <a class="default-a" href="{% url 'public-service-provider' service_provider.id%}">Public View Page</a> in the Registry.</p>
+                <p class="font-size-14 mt-8">Allow other Hub accounts that have connected to your account to be displayed on your <a class="default-a" href="{% url 'public-service-provider' service_provider.id%}">Public Page</a> in the Registry.</p>
             </div>
             <div>
                 <input
